# ai-brain-skills

./: .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  Makefile  README.md  docker-compose.yml  package-lock.json  package.json  pyproject.toml  requirements.txt
.amkyaw/config/: priority-rules.json  security-rules.json  telemetry-config.json
.claude/config/: context-rules.json  performance-rules.json  skills.json
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug-report.md  feature-request.md  skill-request.md
.github/workflows/: deployment.yml  documentation.yml  performance-test.yml  security-scan.yml  validation.yml
docs/api/: config-api.md  hooks-api.md  skill-api-reference.md
docs/getting-started/: basic-usage.md  installation.md  quick-start.md
docs/guides/: advanced-skill-techniques.md  deployment-guide.md  performance-optimization.md  security-best-practices.md  skill-creation-guide.md  testing-strategies.md
docs/reference/: frontmatter-schema.md  markdown-guidelines.md  skill-specification.md
hooks/error/: fallback-handler.js  notify-on-failure.js
hooks/post-skill/: audit-output.js  telemetry.js  update-memory.js
hooks/pre-skill/: check-dependencies.js  log-invocation.js  validate-context.js
scripts/deployment/: deploy-to-claude.sh  rollback.sh  sync-with-repo.sh
scripts/migration/: migrate-v1-to-v2.js  update-frontmatter.py
scripts/performance/: analyze-bottlenecks.py  measure-execution.sh  optimize-skill.sh
scripts/validation/: audit-security.py  (+3 more)
(+120 files in other folders)
